--- a/navbar.html
+++ b/navbar.html
@@ -4,11 +4,8 @@
     </a>
     <ul>
         <li><a href="index.html" class="nav-item home">Home</a></li>
-        <li><a href="traditional-face-painting.html" class="nav-item face-painting">Traditional Face Painting</a></li>
-        <li><a href="airbrush-face-painting.html" class="nav-item airbrush">Airbrush Face Painting</a></li>
-        <li><a href="balloon-twisters.html" class="nav-item balloons">Balloon Twisters</a></li>
-        <li><a href="caricatures.html" class="nav-item caricatures">Caricatures</a></li>
-        <li><a href="henna.html" class="nav-item henna">Henna</a></li>
-        <li><a href="glitter-tattoos.html" class="nav-item glitter-tattoos">Glitter Tattoos</a></li>
+        <li><a href="about.html" class="nav-item about">About Us</a></li>
+        <li><a href="gallery.html" class="nav-item gallery">Gallery</a></li>
+        <li><a href="faq.html" class="nav-item faq">FAQ</a></li>
     </ul>
 </nav>
