--- a/index.html
+++ b/index.html
@@ -30,74 +30,38 @@
     <div id="navbar-container"></div>
     <main>
         <div class="intro-container">
-            <img src="images/giggleslogo.png" alt="Cartoon Katie" class="cartoon-me">
+            <img src="images/giggleslogo.png" alt="Giggles Logo" class="giggles-logo">
             <div class="intro-text">
                 <div class="header">Welcome to Giggles Entertainment!</div>
-                <div class="role-detail">We bring fun and laughter to children of all ages through our talented face painters, balloon animals, magicians and even Caricature artists.</div>
-                <div class="role-detail">Whether you are planning a small birthday party, company picnic, festival or a promotion, Giggles Entertainment will help put your event “over the top” by creating pleasant, impacting long lasting memories.</div>
+                <div class="role-detail">We bring fun and laughter to children of all ages through our talented face painters, balloon animals, magicians and Caricature artists.</div>
+                <div class="role-detail">Whether you are planning a small birthday party, company picnic, festival or a promotion, Giggles Entertainment will help put your event “over the top” by creating pleasant, impacting, long lasting memories.</div>
             </div>
         </div>
-    </main>
-</body>
-        <!-- <div class="project-container">
-            <section class="projects">
-                <div class="project-grid">
-
-                    <div class="project">
-                        <a href="isoftstone.html">
-                            <div class="project-overlay">
-                                <img src="images/index/isoftstone.png" alt="iSoftStone">
-                                <div class="project-description">
-                                    <h4>iSoftStone</h4>
-                                    <p>Style Guide, Nuxeo DAM Demo, AI Reverse Image Search tool</p>
-                                    <p>Key skills: <em>UI/UX Design, Interaction Design, Prototyping, Responsive Design.</em></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="project">
-                        <a href="safechat.html">
-                            <div class="project-overlay">
-                                <img src="images/index/safechat.png" alt="SafeChat">
-                                <div class="project-description">
-                                    <h4>SafeChat</h4>
-                                    <p>Mobile app for on-demand mental health support.</p>
-                                    <p>Key skills: <em>User Research, Prototyping, Usability Testing, Mobile UI Design.</em></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="project">
-                        <a href="itinero.html">
-                            <div class="project-overlay">
-                                <img src="images/index/itinero.png" alt="Itinero">
-                                <div class="project-description">
-                                    <h4>Itinero</h4>
-                                    <p>Travel planning app balancing exploration and organization.</p>
-                                    <p>Key skills: <em>User Research, Affinity Diagram, Prototyping.</em></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="project">
-                        <a href="capstone.html">
-                            <div class="project-overlay">
-                                <img src="images/index/capstone.png" alt="Capstone">
-                                <div class="project-description">
-                                    <h4>Happy to be included</h4>
-                                    <p>Matching hiring needs to qualified, diverse candidates.</p>
-                                    <p>Key skills: <em>User Interviews, Design Ideation, Back-end Programming, Interface Redesign.</em></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div> -->
-
-                </div>
-            </section>
+        
+        <!-- Categories Section -->
+        <div class="categories-section">
+            <div class="category">Traditional Face Painting</div>
+            <div class="category">Airbrush Face Painting</div>
+            <div class="category">Balloon Twisters</div>
+            <div class="category">Caricatures</div>
+            <div class="category">Henna</div>
+            <div class="category">Glitter Tattoos</div>
         </div>
+
+        <h2>Some of our Clients:</h2>
+        <!-- Sponsors Section -->
+        <div class="sponsors-section">
+            <div class="sponsor">Seattle Seahawks</div>
+            <div class="sponsor">Kraken</div>
+            <div class="sponsor">Mariners</div>
+            <div class="sponsor">Amazon</div>
+            <div class="sponsor">Microsoft</div>
+            <div class="sponsor">Seattle Sounders</div>
+            <div class="sponsor">Bill and Melinda Gates Foundation</div>
+            <div class="sponsor">OL Reign</div>
+            <div class="sponsor">Snoqualmie Casino</div>
+        </div>
+    </main>
 
     <div id="footer-container"></div>
     <script src="loadContent.js"></script>
