--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
     </a>
     <ul>
         <li><a href="index.html" class="nav-item home">Home</a></li>
-        <li><a href="about.html" class="nav-item about">About Us</a></li>
+        <li><a href="about.html" class="nav-item about">About</a></li>
         <li><a href="gallery.html" class="nav-item gallery">Gallery</a></li>
         <li><a href="faq.html" class="nav-item faq">FAQ</a></li>
     </ul>
