Added logos for clients

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="intro-text">
                 <div class="header">Welcome to Giggles Entertainment!</div>
                 <div class="role-detail">We bring fun and laughter to children of all ages through our talented face painters, balloon animals, magicians and Caricature artists.</div>
-                <div class="role-detail">Whether you are planning a small birthday party, company picnic, festival or a promotion, Giggles Entertainment will help put your event “over the top” by creating pleasant, impacting, long lasting memories.</div>
+                <div class="role-detail">Whether you are planning a small birthday party, company picnic, festival or a promotion, Giggles Entertainment will help put your event “over the top” by creating pleasant, impacting long lasting memories.</div>
             </div>
         </div>
         
@@ -51,15 +51,15 @@
         <h2>Some of our Clients:</h2>
         <!-- Sponsors Section -->
         <div class="sponsors-section">
-            <div class="sponsor">Seattle Seahawks</div>
-            <div class="sponsor">Kraken</div>
-            <div class="sponsor">Mariners</div>
-            <div class="sponsor">Amazon</div>
-            <div class="sponsor">Microsoft</div>
-            <div class="sponsor">Seattle Sounders</div>
-            <div class="sponsor">Bill and Melinda Gates Foundation</div>
-            <div class="sponsor">OL Reign</div>
-            <div class="sponsor">Snoqualmie Casino</div>
+            <div class="sponsor"><img src="images/clientlogos/seahawks.png" alt="Seattle Seahawks"></div>
+            <div class="sponsor"><img src="images/clientlogos/mariners.png" alt="Mariners"></div>
+            <div class="sponsor"><img src="images/clientlogos/kraken.webp" alt="Kraken"></div>
+            <div class="sponsor"><img src="images/clientlogos/amazon.webp" alt="Amazon"></div>
+            <div class="sponsor"><img src="images/clientlogos/microsoft.png" alt="Microsoft"></div>
+            <div class="sponsor"><img src="images/clientlogos/sounders.jpg" alt="Seattle Sounders"></div>
+            <div class="sponsor"><img src="images/clientlogos/gf.png" alt="Bill and Melinda Gates Foundation"></div>
+            <div class="sponsor"><img src="images/clientlogos/olreign.png" alt="OL Reign"></div>
+            <div class="sponsor"><img src="images/clientlogos/snoqualmie.png" alt="Snoqualmie Casino"></div>
         </div>
     </main>
 
