--- a/index.html
+++ b/index.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giggles Entertainment</title>
+    <title>Seattle Facepainting | Giggles Entertainment</title>
+    <link rel="icon" type="image/png" href="images/giggleslogo.png">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://use.typekit.net/your-project-id.css">
+
+    <!-- Chinese Rocks font -->
+    <link rel="stylesheet" href="https://use.typekit.net/suk1jet.css">
+    <!-- font-family: "chinese-rocks", sans-serif;
+    font-weight: 400;
+    font-style: normal; -->
+
+    <!-- Lato font -->
+    <link rel="stylesheet" href="https://use.typekit.net/suk1jet.css">
+
+    <!-- Source Sans 3 font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Giggles Entertainment</h1>
-        <div class="button-row">
-            <button class="btn">Face Painting</button>
+    <div id="navbar-container"></div>
+    <main>
+        <div class="intro-container">
+            <img src="images/giggleslogo.png" alt="Giggles Logo" class="giggles-logo">
+            <div class="intro-text">
+                <div class="header">Welcome to Giggles Entertainment!</div>
+                <div class="role-detail">We bring fun and laughter to children of all ages through our talented face painters, balloon animals, magicians and Caricature artists.</div>
+                <div class="role-detail">Whether you are planning a small birthday party, company picnic, festival or a promotion, Giggles Entertainment will help put your event “over the top” by creating pleasant, impacting long lasting memories.</div>
+            </div>
         </div>
-        <div class="button-row">
-            <button class="btn">Balloon Animals</button>
+        
+        <!-- Categories Section -->
+        <div class="categories-section">
+            <div class="category">Traditional Face Painting</div>
+            <div class="category">Airbrush Face Painting</div>
+            <div class="category">Balloon Twisters</div>
+            <div class="category">Caricatures</div>
+            <div class="category">Henna</div>
+            <div class="category">Glitter Tattoos</div>
         </div>
-        <div class="button-row">
-            <button class="btn">Caricatures</button>
+
+        <h2>Some of our Clients:</h2>
+        <!-- Sponsors Section -->
+        <div class="sponsors-section">
+            <div class="sponsor"><img src="images/clientlogos/seahawks.png" alt="Seattle Seahawks"></div>
+            <div class="sponsor"><img src="images/clientlogos/mariners.png" alt="Mariners"></div>
+            <div class="sponsor"><img src="images/clientlogos/kraken.webp" alt="Kraken"></div>
+            <div class="sponsor"><img src="images/clientlogos/amazon.webp" alt="Amazon"></div>
+            <div class="sponsor"><img src="images/clientlogos/microsoft.png" alt="Microsoft"></div>
+            <div class="sponsor"><img src="images/clientlogos/sounders.jpg" alt="Seattle Sounders"></div>
+            <div class="sponsor"><img src="images/clientlogos/gf.png" alt="Bill and Melinda Gates Foundation"></div>
+            <div class="sponsor"><img src="images/clientlogos/olreign.png" alt="OL Reign"></div>
+            <div class="sponsor"><img src="images/clientlogos/snoqualmie.png" alt="Snoqualmie Casino"></div>
         </div>
-        <div class="button-row">
-            <button class="btn">Henna</button>
-        </div>
-        <div class="button-row">
-            <button class="btn">Magic</button>
-        </div>
-        <div class="button-row">
-            <button class="btn">Games for Rent</button>
-        </div>
-    </div>
-    <footer class="footer">
-        Copyright © Giggles Entertainment
-    </footer>
+    </main>
+
+    <div id="footer-container"></div>
+    <script src="loadContent.js"></script>
 </body>
 </html>
